dashboard csv changes

--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -426,8 +426,8 @@
 "You have no default billing address in your address book.","You have no default billing address in your address book."
 "You have no default entries in your address book.","You have no default entries in your address book."
 "You have no default shipping address in your address book.","You have no default shipping address in your address book."
-"You have not set a default billing address.","You have not set a default billing address."
-"You have not set a default shipping address.","You have not set a default shipping address."
+"You have not set a default billing address.","Set a default billing address."
+"You have not set a default shipping address.","Set a default shipping address."
 "You have placed no orders yet.","You have placed no orders yet."
 "You have placed no products yet.","You have placed no products yet."
 "Your account balance is: %s","Your account balance is: %s"
