--- a/lib/Zend/Locale/Data/root.xml
+++ b/lib/Zend/Locale/Data/root.xml
@@ -2865,7 +2865,7 @@
 				<symbol>₪</symbol>
 			</currency>
 			<currency type="INR">
-				<symbol>Rs</symbol>
+				<symbol>Rs. </symbol>
 			</currency>
 			<currency type="ISK">
 				<symbol>Ikr</symbol>
